--- a/src/App.css
+++ b/src/App.css
@@ -267,6 +267,10 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style: none;
+}
+
 a:visited {
   color: red;
 }
@@ -312,6 +316,7 @@ h1 {
 .chooseMovie img {
   width: 250px;
   margin: 10px auto;
+  padding-bottom: 30px;
 }
 
 select {
@@ -355,7 +360,31 @@ button {
   color: black;
   font-size: 1.1rem;
   padding: 5px;
+}
 
+.watchListBox {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 100px;
+}
+
+.watchListBox img {
+  width: 200px;
+}
+
+.watchListBox ul {
+  width: calc((100% / 3) - 10px);
+  border: 3px solid red;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 5px;
+  text-align: center;
+}
+
+.watchListBox p {
+  font-size: 1.1rem;
 }
 
 .escape,
