--- a/src/App.css
+++ b/src/App.css
@@ -286,7 +286,7 @@ body {
 header {
   text-align: center;
   height: 100vh;
-  padding-top: 100px;
+  padding: 100px;
 }
 
 header span {
@@ -302,11 +302,6 @@ h1 {
   transition: .3s ease;
 }
 
-.indexHeader {
-  background-image: url(./assets/vhs.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-}
 
 /* FORM */
 .chooseMovie {
