--- a/src/App.css
+++ b/src/App.css
@@ -286,13 +286,14 @@ body {
 header {
   text-align: center;
   height: 100vh;
-  padding: 100px;
+  padding-top: 100px;
 }
 
 header span {
   display: block;
 }
 
+h1.rouletteHeader,
 .rouletteHeader h1 {
   font-size: 4rem;
 }
@@ -302,6 +303,10 @@ h1 {
   transition: .3s ease;
 }
 
+.indexHeader {
+  height: 100vh;
+  padding-top: 100px;
+}
 
 /* FORM */
 .chooseMovie {
@@ -428,7 +433,6 @@ button {
 
 .goToWatchList {
   right: 15px;
-
 }
 
 .button:hover,
@@ -441,8 +445,6 @@ button:focus,
 .goToWatchList:hover {
   box-shadow: 0 0 30px 10px red;
 }
-
-
 
 /* MEDIA QUERIES */
 @media (max-width:950px) {
@@ -459,15 +461,12 @@ button:focus,
 
 @media (max-width:600px) {
   header h1 {
-
     font-size: 3.2rem;
   }
-
 
   header span {
     font-size: 4.5rem;
   }
-
 
   .watchListh1,
   h1.rouletteHeader {
@@ -493,7 +492,6 @@ button:focus,
 }
 
 @media (max-width:450px) {
-
   header h1 {
     font-size: 2.2rem;
   }
