--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Creepster&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
 /* setup */
 html {
@@ -282,7 +283,7 @@ a:visited {
 }
 
 body {
-  font-family: 'Creepster', cursive;
+  font-family: 'VT323', monospace;
   font-size: 125%;
   background-color: black;
   color: red;
@@ -308,15 +309,21 @@ header span {
 h1 {
   font-size: 5rem;
   transition: .3s ease;
+  text-transform: uppercase;
 }
+
 
 .indexHeader {
   height: 100vh;
   padding-top: 100px;
+  background-image: url('./assets/vhs.png');
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: contain;
 }
 
 .dice {
-  width: 40%;
+  width: 30%;
 }
 
 
@@ -344,7 +351,7 @@ h1 {
 
 select {
   border: none;
-  font-family: 'Creepster', cursive;
+  font-family: 'VT323', monospace;
   background: none;
   color: red;
   margin-bottom: 15px;
@@ -365,7 +372,7 @@ button {
   cursor: pointer;
   width: 160px;
   margin-bottom: 10px;
-  font-family: 'Creepster', cursive;
+  font-family: 'VT323', monospace;
   background-color: black;
 }
 
