--- a/src/App.css
+++ b/src/App.css
@@ -316,7 +316,7 @@ h1 {
 .indexHeader {
   height: 100vh;
   padding-top: 100px;
-  background-image: url('./assets/vhs.png');
+  background-image: url('./assets/vhs3.png');
   background-repeat: no-repeat;
   background-position: left;
   background-size: contain;
@@ -478,6 +478,12 @@ button:focus,
   }
 }
 
+@media (max-width:730px) {
+  .indexHeader {
+    background-size: cover;
+  }
+}
+
 @media (max-width:600px) {
   header h1 {
     font-size: 3.2rem;
@@ -522,5 +528,11 @@ button:focus,
   h1.rouletteHeader {
     font-size: 1.9rem;
     padding: auto 0;
+  }
+}
+
+@media (max-width:985px) and (min-height:945px) {
+  .indexHeader {
+    background-size: cover;
   }
 }
